# Repack2Linux

./: .gitignore  Cargo.toml  DOCS_PORTABLE_ENGINE.md  LANDING_COPY.md  PROGRESS.md  PROJECT_OVERVIEW.md  README.md  build.rs  build_appimage.sh  build_release.sh  presets.json
Repack2Linux/: README.md
cloud/: README.md  games.sample.json
src/: command_runner.rs  community_sync.rs  config.rs  database.rs  dependencies.rs  detector.rs  engine.rs  export.rs  installer.rs  main.rs  mounter.rs  presets.rs  proton.rs  shortcuts.rs
src/app/: i18n.rs  mod.rs  update.rs  view.rs
src/installer/: mod.rs  payload.rs  script_gen.rs  sfx.rs
src/ui/: common.rs  factory.rs  mod.rs  settings.rs  theme.rs  tools.rs
