[package]
name = "repack2linux-rs"
version = "1.3.0"
edition = "2021"
# build = "build.rs" # Wyłączone tymczasowo

[features]
default = ["embed_tools"]
embed_tools = []

[dependencies]
# GUI (GPU Accelerated, Native Look)
iced = { version = "0.13", features = ["tokio", "image", "svg", "advanced"] }
# Asynchroniczne operacje (plików, sieci)
tokio = { version = "1", features = ["full"] }
# Zapytania HTTP (Proton, SteamGridDB)
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
# Operacje na JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Regex do czyszczenia nazw gier
regex = "1"
# Rekurencyjne przeszukiwanie plików
walkdir = "2"
# Obrazy (ikony, okładki)
image = "0.24"
pelite = "0.10"
# Baza danych (SQLite)
rusqlite = { version = "0.31", features = ["bundled"] }
# Schowek (Copy/Paste)
arboard = "3.4"
# Otwieranie linków/folderów
open = "5"
# Tworzenie tymczasowych plików (dla downloadera)
tempfile = "3"
# Generowanie unikalnych ID (dla gier)
uuid = { version = "1", features = ["v4"] }
dirs = "5"
rfd = "0.14"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"
chrono = "0.4"
crc = "2"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
base64 = "0.22"
